--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -1,11 +1,9 @@
-.about {
+.portfolio {
     position: relative;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding: 5rem 0;
 
     @media(min-width: 992px) {
-        padding-top: 6.25rem;
-        padding-bottom: 6.25rem;
+        padding: 6.25rem 0;
     }
 
     &:after {
@@ -19,17 +17,17 @@
         margin: 0 auto;
     }
 
-    .aboutList {
+    .portfolioList {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-between;
         margin-top: 2rem;
 
         @media(min-width: 992px) {
             margin-top: 3.75rem;
         }
 
-        .aboutItem {
+        .portfolioItem {
             width: 100%;
             margin-bottom: 1.875rem;
             display: flex;
