--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -35,9 +35,11 @@
             box-shadow: var(--shadow-1);
             border-radius: 0.625rem;
             background-color: var(--background-2);
+            margin-bottom: 2rem;
 
             @media(min-width: 768px) {
                 width: calc(50% - 2rem);
+                margin-bottom: 0;
             }
 
             .image {
