--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -3,10 +3,11 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        align-items: flex-end;
+        align-items: flex-start;
 
         .formGroup {
             width: 100%;
+            margin-bottom: 1rem;
 
             label {
                 display: block;
@@ -14,7 +15,7 @@
                 font-size: 0.875rem;
                 line-height: 1.375rem;
                 font-weight: 500;
-                color: #a0a8b3;
+                color: var(--foreground-2);
                 letter-spacing: 1px;
                 text-transform: uppercase;
                 font-family: var(--font-secondary);
@@ -35,6 +36,7 @@
                 font-family: var(--font-secondary);
                 box-shadow: var(--inner-shadow);
                 letter-spacing: 1px;
+                outline: none;
 
                 &:focus {
                     background-color: var(--background-1);
@@ -59,6 +61,36 @@
                 @media(min-width: 768px) {
                     width: calc(50% - 1rem);
                 }
+            }
+
+            &.inputPhone {
+                margin-top: 5px;
+            }
+
+            &.submit {
+                button {
+                    color: var(--foreground-2);
+                    transition: all 500ms;
+                    display: flex;
+                    text-transform: uppercase;
+                    font-size: 1.125rem;
+                    align-items: center;
+
+                    &:hover,
+                    &:focus {
+                        color: var(--theme-primary);
+                    }
+
+                    svg {
+                        margin-left: 0.25rem;
+                    }
+                }
+            }
+            p {
+                font-size: 0.875rem;
+                color: var(--theme-primary);
+                text-decoration: italic;
+                margin: 0;
             }
         }
     }
